実行ボタンの追加

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
       </div>
       <div id="right-section">
         <div id="static-canvas-holder"></div>
+        <div id="execute-button-container">
+          <button id="execute-button" onclick="executeAction()">実行</button>
+        </div>
       </div>
     </div>
 
