リセットボタンの追加

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <div id="static-canvas-holder"></div>
         <div id="execute-button-container">
           <button id="execute-button" onclick="executeAction()">実行</button>
+          <button id="reset-button" onclick="resetAction()">リセット</button>
         </div>
       </div>
     </div>
