UI: 保存ボタンの追加

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <div id="execute-button-container">
           <button id="execute-button" onclick="executeAction()">実行</button>
           <button id="reset-button" onclick="resetAction()">リセット</button>
+          <button id="save-button" onclick="saveAction()">保存（決定）</button>
         </div>
         <div id="emotion-buttons">
           <button class="emotion-btn" onclick="setEmotion('normal')">ニュートラル</button>
