感情保存機能の追加

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
       </div>
       <div id="right-section">
         <div id="static-canvas-holder"></div>
+        <div id="subject-id-container">
+          <label for="subject-id">被験者ID:</label>
+          <input type="text" id="subject-id" placeholder="例: S001" />
+        </div>
         <div id="execute-button-container">
           <button id="execute-button" onclick="executeAction()">実行</button>
           <button id="reset-button" onclick="resetAction()">リセット</button>
